# hopalong-visoxide

./: .gitignore  Cargo.toml  README.md  improvement-plan.md  justfile
benches/: sim_perf.rs
src/: app.rs  lib.rs  main.rs  renderer.rs  sim.rs
src/shaders/: particle.wgsl
