[package]
name = "hopalong-visoxide"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
egui-wgpu = "0.33"
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }
rand = "0.9"
glam = "0.29"
image = "0.25"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
